# learning-axum-rust

./: .gitignore  Cargo.toml  docker-compose.yml
src/: lib.rs  main.rs  test.rs
src/api/: extractors.rs  mod.rs  response.rs
src/api/dto/: auth_dto.rs  category_dto.rs  mod.rs  product_dto.rs
src/api/handlers/: app_handlers.rs  auth_handler.rs  category_handlers.rs  mod.rs  product_handlers.rs
src/api/middleware/: auth_middleware.rs  custom_towers.rs  logging.rs  mod.rs
src/api/routes/: auth_routes.rs  category_routes.rs  health.rs  mod.rs  product_routes.rs
src/application/services/: category_service.rs  product_service.rs
src/config/: settings.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: category.rs  mod.rs  order.rs  product.rs  transaction.rs  user.rs
src/domain/repositories/: category_repository.rs  mod.rs  product_repository.rs  user_repository.rs
src/domain/services/: auth_service.rs  mod.rs
src/infrastructure/database/: connection.rs  mod.rs
src/infrastructure/database/models/: category_document.rs  mod.rs  product_document.rs  user_document.rs
src/infrastructure/database/repositories/: category_repository.rs  mod.rs  mongodb_category_repository.rs  mongodb_product_category.rs  mongodb_user_repository.rs  product_repository.rs
src/state/: mod.rs
